# opengloves-named-pipe-example

./: CMakeLists.txt  main.cpp
